# algos

./: LICENSE  go.mod  pyproject.toml
bracketing/: bracketing.py
btree/: btree.go
derivatives/: back_propagation.py  fdm.py
newton/: newton.py
shubert-piyavskii/: shubert-piyavskii.py
